[package]
name = "tunix"
version = "0.1.8"
edition = "2024"

license = "MIT"
authors = ["dawson a957360688@gmail.com"]
repository = "https://github.com/Dawson-Jones/tunix"
description = "Cross-platform TUN device implementation"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
thiserror = "1.0.48"
tokio = { version = "1", features = ["net", "macros", "sync"], optional = true }
tokio-util = { version = "0.7", features = ["codec"], optional = true }
bytes = { version = "1", optional = true }
byteorder = { version = "1", optional = true }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27.1", default-features = false, features = ["ioctl"] }

# TODO: widen this to cfg(unix) if another Unix backend needs ioctl-sys.
[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
ioctl = { version = "0.8", package = "ioctl-sys" }

[target.'cfg(target_os = "windows")'.dependencies]
# Keep this aligned with wintun's windows dependency so NET_LUID_LH is a single shared type.
windows = { version = "0.51", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
] }
wintun = { version = "0.3", features = ["panic_on_unsent_packets"] }


[features]
async = ["tokio", "tokio-util", "bytes", "byteorder"]
default = ["async"]

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
futures = "0.3"
packet = "0.1"

[[example]]
name = "async_read"
required-features = ["async"]

[[example]]
name = "async_stream"
required-features = ["async"]

[[example]]
name = "async_ping"
required-features = ["async"]
